cli/tests/testdata/fmt/fmt_check_parse_error.out
Error checking: [WILDCARD]parse_error.ts
  Expected '{', got '<eof>' at [WILDCARD]parse_error.ts:2:7

    class Test
          ~~~~
error: Found 1 not formatted file in 1 file
